# docker.leila

./: .gitignore  Dockerfile  Dockerfile.base  Dockerfile.leila  README.md  attachdocker.sh  build.sh  builddocker.sh  configure-container.sh  enterdocker.sh  etc.apache2.tar.xz  runscript.sh  self-signed.key  tips.txt
.certs/: self-signed.crt
.scripts/: Toolchain-RaspberryPi.cmake  build-crosstools-ng.sh  build-edgetpu-dependencies.sh  build-image.sh  build-squigglemark-dependencies.sh  crosstool-ng.raspi0.config  discover.py  ff.sh  install-packages.sh  install-packages.sh~  qtcreator.sh  run-container.sh  utils.sh
.scripts/libedgetpu/: CMakeLists.txt  absl.cc
.scripts/libusb/: CMakeLists.txt  libusb.patch
